--- a/client/src/index.css
+++ b/client/src/index.css
@@ -151,3 +151,32 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
+.orbit {
+  /* square path, fixed size */
+  /* offset-path: path("M 0 0 H 300 V 200 H 0 Z");
+  offset-rotate: auto;
+  animation: orbitAnim 6s linear infinite; */
+}
+
+.orbit::before{
+  content: '';
+  position: absolute;
+}
+
+.orbit::before{
+  width: 200%;
+  height: 450%;
+  background-image: conic-gradient(white 0deg, transparent 60deg, transparent 180deg, white 180deg, transparent 240deg);
+  inset: -180% -50%;
+  z-index: -2;
+  animation: border-animation 4s linear infinite  ;
+}
+
+@keyframes border-animation {
+  to {
+    transform: rotate(-360deg);
+  }
+}
